# pajamax

./: Cargo.toml  README.md  benchmark.md
atiour/: Cargo.toml
atiour-build/: Cargo.toml
atiour-build/src/: lib.rs
atiour/src/: connection.rs  hpack_decoder.rs  http2.rs  lib.rs  status.rs
atiour/src/huffman/: mod.rs
benchmark/: Cargo.toml  README.md  build.rs  grpc_bench.md  proto
benchmark/framegraph/: README.md  pajamax.ghz.out  tonic.ghz.out
benchmark/framegraph/tonic-helloworld/: Cargo.toml  helloworld.proto
benchmark/framegraph/tonic-helloworld/src/: main.rs
benchmark/src/: bench-client.rs  tonic-helloworld-server.rs
examples/: Cargo.toml  build.rs
examples/proto/: dict_store.proto
examples/src/: dict_store.rs  helloworld.rs  with_log.rs
pajamax/: Cargo.toml  README.md
pajamax-build/: Cargo.toml  README.md
pajamax-build/src/: dispatch_mode.rs  lib.rs  local_mode.rs
pajamax/src/: config.rs  connection.rs  dispatch.rs  dispatch_server.rs  error.rs  hpack_decoder.rs  hpack_encoder.rs  http2.rs  lib.rs  local_server.rs  macros.rs  poll.rs  response_end.rs  status.rs  uring.rs
pajamax/src/huffman/: mod.rs
