[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tonic-helloworld-server"
path = "src/tonic-helloworld-server.rs"

[[bin]]
name = "bench-client"
path = "src/bench-client.rs"

[dependencies]
tonic = { version = "*" }
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "*"
