[package]
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
edition = "2021"
license = "MIT"
name = "examples"

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"

[[bin]]
name = "with_log"
path = "src/with_log.rs"

[dependencies]
atiour = {version="*", path="../atiour/"}
env_logger = "0.11.8"
log = "0.4.27"
prost = "0.13.5"

[build-dependencies]
prost-build = "0.13.5"
atiour-build = {version="*", path="../atiour-build/"}
