[package]
name = "pajamax"
version = "0.1.1"
edition = "2021"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "Fast gRPC server framework in synchronous mode."
license = "MIT"
repository = "https://github.com/WuBingzheng/pajamax"
documentation = "https://docs.rs/pajamax"
keywords = ["grpc", "protobuf", "synchronous"]
categories = ["network-programming"]

[dependencies]
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
