[package]
name = "pajamax"
version = "0.2.0"
edition = "2021"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "Fast gRPC server framework in synchronous mode."
license = "MIT"
repository = "https://github.com/WuBingzheng/pajamax"
documentation = "https://docs.rs/pajamax"
keywords = ["grpc", "protobuf", "synchronous"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0.98"
io-uring = "0.7.7"
libc = "0.2.172"
mio = {version="1.0.2", features=["net", "os-poll", "os-ext"]}
prost = "0.13"
slab = "0.4.9"

[build-dependencies]
prost-build = "0.13"
