[package]
name = "pajamax"
version = "0.3.2"
edition = "2021"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "Fast gRPC server framework in synchronous mode."
license = "MIT"
repository = "https://github.com/WuBingzheng/pajamax"
documentation = "https://docs.rs/pajamax"
keywords = ["grpc", "protobuf", "blocking", "synchronous"]
categories = ["network-programming"]

[dependencies]
prost = "0.13"
log = { version = "0.4", optional = true }

[features]
default = ["log"]
